| Summary: | ASTERISK-20040: Asterisk crashes when a guest call uses directmedia | ||||||
| Reporter: | Terry Wilson (twilson) | Labels: | |||||
| Date Opened: | 2012-06-22 17:21:41 | Date Closed: | 2012-06-22 17:27:20 | ||||
| Priority: | Blocker | Regression? | Yes | ||||
| Status: | Closed/Complete | Components: | Channels/chan_sip/General | ||||
| Versions: | 11 1.8.14.0 10.6.0 | Frequency of Occurrence | Constant | ||||
| Related Issues: |
| ||||||
| Environment: | Attachments: | ||||||
| Description: | When doing accepting a guest call, there is no p->relatedpeer is NULL. The directmediaha code assumes relatedpeer is non-NULL and accesses p->relatedpeer->directmediaha. | ||||||
| Comments: | |||||||